2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx:
 - Fixed broken example.  Thanks Chris Angelico.
2011-11-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template:
 - Remove quotes that confused MinGW make.
 - MinGW's make tool has a different name.
 - As per patch in #244, thanks Sam Kapilivksy.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/libpqxx.docs, debian/libpqxx-dev.docs:
 - Removed reference to old TODO file.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Cosmetic.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Documentation patch from #243.  Thanks Sam Kapilivsky.
2011-11-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx,
 test/unit/test_errorhandler.cxx:
 - Provide access to a connection's errorhandlers list.
 - Fixes #242.  Thanks Sam Kapilivsky for pointing out the need.
2011-11-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/errorhandler.hxx, src/notify-listen.cxx:
 - Added missing #include <functional>
 - Fixes #241.  Thanks Sam Kapilivsky.
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Use debug library where appropriate, as per #238 (thanks Sam Kapilivksy).
 win32/vc-test-unit.mak.template:
 - Build test/unit, not test, also as per #238
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Overhaul by Sam Kapilivsky.  Thanks once again!
2011-11-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_main.hxx:
 - Workaround in create_pqxxevents for older backends without multi-insert.
2011-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, win32/vc-test-unit.mak.template:
 - Support building of new-style unit tests on Visual C++.
 - As per patch in #238; thanks Sam Kapilivsky.
 win32/common-sample, win32/vc-libpqxx.mak.template,
 win32/vc-test.mak.template:
 - Easier Visual C++ setup.